add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <li>Lacrosse</li>
             <li>Games</li>
             <li>Coding</li>
-            <li>Reading asoaif & lotr</li>
+            <li>Reading asoif & lotr</li>
+            <li>Warhammer 40k</li>
           </ul>
         </div>
       </main>
