add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -75,8 +75,12 @@
         function update() {
           positionX = positionX + speed;
           moveBoxTo(positionX);
-		  if (positionX > boardWidth) {}
-
+          if (positionX > boardWidth) {
+            speed = -speed;
+          }
+          if (positionX < 0) {
+            speed = -speed;
+          }
         }
 
         /* 
