--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -92,7 +92,11 @@
           positionX = 0;
           points = points + 1;
           changeBoxText(points);
-          speed = speed + 3;
+           if (speed > 0) {
+            speed = speed + 3;
+           } else if (speed <0) {
+            speed = speed - 3
+           }
         }
       })();
     </script>
